# rfilt

./: .gitignore  BUGS  CMakeLists.txt  ChangeLog  README.md  TODO  _build.sh  _clean.sh  _make.sh  _plot.gnuplot  _plot2.gnuplot  _plot3.gnuplot  rfilt.c  rfilt.h  rfilt_old.c  rfilt_test.c
doc/: rfilt.odt
stuff/: test.py
